2009-04-24	Mike Massonnet
Proper block/unblock menu functions and fix locale bug

	- panel-plugin/main.c:
		Add new functions plugin_block_menu/unblock_menu to block the
		popup menu of the status icon in a proper way.
	- panel-plugin/main.c(plugin_about):
		Drop the macro XFCE_LICENSE_GPL in favor of a static text.
		Fixes bug #5285.

2009-04-24	Mike Massonnet
Fix dummy warning

2009-04-23	Mike Massonnet
Use stock item for the main icon

	- panel-plugin/main.c(cb_status_icon_set_size),
	panel-plugin/main.c(panel_plugin_set_size):
		Use stock icon paste to fit the user icon theme.

2009-04-23	Mike Massonnet
Yet another GMarkup fix

2009-04-22	Mike Massonnet
Update documentation

2009-04-22	Mike Massonnet
New option to exclude selections from the history

	- panel-plugin/settings-dialog.glade:
		Move option "Add selections" to new frame "Behavior" and add a
		new option that allows to exclude the selections from the
		history.
	- panel-plugin/collector.c:
		Install a new property history-ignore-primary-clipboard use it
		inside cb_check_primary_clipboard() to prevent a selection
		from going into the history.
	- panel-plugin/main.c:
		Bind new property to xfconf and the settings dialog.
	- panel-plugin/common.h:
		New default setting for history-ignore-primary-clipboard.

2009-04-21	Mike Massonnet
Refixing the last two commits with the right function calls

	- panel-plugin/main.c:
		Use g_markup_printf_escaped() instead of in-between variables
		being set with g_markup_escape_text().

2009-04-21	Mike Massonnet
Same commit for the regex and the command that are also displayed

2009-04-21	Mike Massonnet
Markup escape for action name and command name in the treeview

2009-04-21	Mike Massonnet
Add OnlyShowIn to the desktop entry file for the menu

	- xfce4-clipman-plugin.desktop.in:
		The file is using a reserved category and therefore must have
		a OnlyShowIn key.

2009-04-21	Mike Massonnet
Open the documentation in the user locale
